# AgentTeams

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.ja-JP.md  README.md  README.zh-CN.md  dag-team.yaml  luxury-car-research-prompt.md  luxury-car-research-team.yaml  todo.md
.github/workflows/: build-rc.yml  build.yml  helm-lint.yml  release.yml  remediation-gates.yml  test-integration.yml
changelog/: current.md  v1.1.1.md
copaw/: AGENTS.md  Dockerfile  pyproject.toml
copaw/scripts/: copaw-worker-entrypoint.sh  patch_copaw_matrix_sync_loop.py
copaw/tests/: test_bridge.py  test_bridge_providers.py  test_channel_mention.py  test_health.py  (+19 more)
dashboard/: README.md
docs/: agent-pod-template.md  ai-coworking-reshape-plan.md  cms-integration.md  declarative-resource-management.md  development.md  embedded-docker-layout.md  faq.md  harness-worker.md  import-worker.md  k8s-native-agent-orch.md  manager-guide.md  member-runtime-config-contract.md  quickstart.md  qwenpaw-webteam-e2e-plan.md  skill-format.md  teamharness-boundary-and-contracts.md  teamharness-project-task-runtime-design.md  upstream-integration-migration.md  worker-guide.md  worker-hot-update-design.md
hack/: local-k8s-down.sh  local-k8s-up.sh  mirror-images.sh  split_qwenpaw_update.py  split_teamharness_mcp_tools.py
harness/: Dockerfile  README.md  pyproject.toml
harness/src/harness_worker/: bridge.py  config.py  matrix_relay.py  remote_cli.py  remote_worker.py  sync.py  worker.py
harness/src/harness_worker/harness/: base.py  claude.py
harness/tests/: test_remote_worker.py
hermes/: Dockerfile  pyproject.toml
hiclaw-controller/: Dockerfile  Dockerfile.embedded  go.mod
install/: README.md  agentteams-install.ps1  agentteams-install.sh  agentteams-verify.sh  defaults.env  hiclaw-apply.sh  hiclaw-import.ps1  hiclaw-import.sh  hiclaw-install.ps1  hiclaw-install.sh  hiclaw-verify.sh  load-defaults.ps1
manager/: Dockerfile  Dockerfile.copaw  README.md
openclaw-base/: Dockerfile
openhuman/: Dockerfile  pyproject.toml
openhuman/scripts/: openhuman-worker-entrypoint.sh
openhuman/src/openhuman_worker/: __init__.py  bridge.py  cli.py
openhuman/tests/: test-entrypoint-agentteams-env.sh  test_bridge.py
plugins/: README.md
plugins/cli/: pyproject.toml
plugins/cli/src/agentteams_cli/: __init__.py  config_store.py  main.py  plugin_manager.py
qwenpaw/: Dockerfile  README.md  pyproject.toml
qwenpaw/hack/: _debug_pkg.py
qwenpaw/scripts/: install-builtin-qwenpaw-plugins.py  patch-qwenpaw-defer-mcp-startup.py  qwenpaw-teamharness-plugin-reload.sh  qwenpaw-worker-entrypoint.sh  qwenpaw_site_packages_gate.py  qwenpaw_upstream_manifest.json
qwenpaw/src/matrix/: channel.py
qwenpaw/src/qwenpaw_worker/: __init__.py  cli.py  config.py  credentials.py  heartbeat.py  log.py  plugin_bootstrap.py  plugin_install.py  runtime_configurator.py  security_bootstrap.py  sync.py  update.py  worker.py
qwenpaw/src/qwenpaw_worker/update/: __init__.py  agent_package.py  channel_writers.py  constants.py  model_sync.py  runtime_config.py  runtime_updater.py  teams_prompt.py  utils.py
qwenpaw/tests/: matrix_overlay_harness.py  test_config.py  test_credential_runtime.py  test_defer_mcp_startup_patch.py  test_heartbeat.py  test_logging_config.py  test_matrix_overlay.py  test_package_update.py  test_runtime_config.py  test_site_packages_gate.py  test_sync.py  test_update.py  test_worker_lifecycle.py
qwenpaw/tests/integration/: test-real-image-model-api.sh  test-sync-minio.sh  test-update-runtime-config.sh  test-worker-daemon.sh
qwenpaw/tests/integration/lib/: qwenpaw-image-e2e.sh
scripts/: export-debug-log.py  provision-worker-gitea.sh
shared/python/hiclaw_common/: README.md  pyproject.toml
shared/python/hiclaw_common/src/hiclaw_common/: __init__.py  matrix.py  policies.py  sync.py
tests/: README.md  run-all-tests.sh  test-01-manager-boot.sh  test-02-create-worker.sh  test-03-assign-task.sh  test-04-human-intervene.sh  test-06-multi-worker.sh  test-100-cleanup.sh  test-12-github-mcp-tools.sh  test-14-git-collab.sh  test-15-import-worker-zip.sh  test-16-import-worker-package-default.sh  test-17-worker-config-verify.sh  test-18-team-config-verify.sh  test-19-human-and-team-admin.sh  test-20-inline-worker-config.sh  test-21-team-project-dag.sh  test-22-delete-worker-cleanup.sh  test-23-runtime-switch.sh  test-24-skills-management.sh  test-25-name-validation.sh  test-26-progress-watchdog.sh  test-26-qwenpaw-teamharness-plugin-mode.sh  test-27-qwenpaw-webteam-package.sh  test-28-qwenpaw-webteam-hot-update.sh  test-29-qwenpaw-webteam-heartbeat.sh  test-30-qwenpaw-webteam-cron.sh  test-agentteams-rename-defaults.sh  test-oss-credentials.sh
worker/: Dockerfile  README.md
(+773 files in other folders)
