[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hiclaw-harness-worker"
version = "0.1.9"
description = "HiClaw harness worker — delegates the agent loop to Claude Code, Gemini CLI, OpenCode, or Codex. Includes the harness-remote developer CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["hiclaw", "agent", "claude-code", "gemini", "ai", "developer-tools"]
authors = [
    { name = "HiClaw Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "hiclaw-common[matrix]>=0.1.1",
]

[project.scripts]
harness-worker = "harness_worker.cli:main"
harness-remote = "harness_worker.remote_cli:main"

[project.urls]
Homepage = "https://github.com/higress-group/hiclaw"
Repository = "https://github.com/higress-group/hiclaw"
Documentation = "https://github.com/higress-group/hiclaw/blob/main/harness/README.md"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/harness_worker"]
