[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentteams"
version = "0.1.0"
description = "AgentTeams plugin CLI fallback for TeamHarness packages"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
agentteams = "agentteams_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
