[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hiclaw-common"
version = "0.1.0"
description = "Shared runtime capabilities for HiClaw worker runtimes"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
matrix = ["mautrix>=0.20", "markdown-it-py>=3.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/hiclaw_common"]
