[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hiclaw-common"
version = "0.1.1"
description = "Shared runtime capabilities for HiClaw worker runtimes (Matrix relay, MinIO sync, AI policies)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["hiclaw", "agent", "matrix", "minio", "ai"]
authors = [
    { name = "HiClaw Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
matrix = ["mautrix>=0.20", "markdown-it-py>=3.0"]

[project.urls]
Homepage = "https://github.com/higress-group/hiclaw"
Repository = "https://github.com/higress-group/hiclaw"

[tool.hatch.build.targets.wheel]
packages = ["src/hiclaw_common"]
